--- a/css/header.css
+++ b/css/header.css
@@ -5,102 +5,106 @@
   padding: 1rem 3rem;
   width: 100%;
   position: relative;
+  z-index: 1;
 }
 
-.header-nome h1 {
-  font-size: 1.7rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  margin: 0;
+.header-imagem-circulo {
+  width: 10px;
+  transition: all 0.3s ease;
 }
-
-  .header-imagem-circulo {
-    width: 10px;
-    transition: all 0.3s ease;
-   
-  }
-
-/* MENU HAMBÚRGUER (Oculto por padrão) */
-.header-hamburguer {
-  display: none;
-  flex-direction: column;
-  gap: 4px;
-  cursor: pointer;
-}
-
-.header-hamburguer span {
-  width: 25px;
-  height: 3px;
-  background-color: var(--cor-texto-escuro);
-  transition: transform 0.3s ease;
-}
-
-/* MENU (Por padrão, aparece em telas grandes) */
 
 .header-menu {
   display: flex;
-  position: static;
+  position: fixed;
+  width: 100%;
   background: transparent;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+#header.menu-claro {
+  color: white;
 }
 
 .header-menu ul {
   list-style: none;
-  margin: 0;
   padding: 0;
+  gap: 1rem;
+  width: 70%;
+  margin-top: 20rem;
   display: flex;
-  gap: 1.5rem;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .header-menu li {
   text-align: center;
-  cursor: pointer;
- margin-right: 5rem;
- position: relative;
- transition: transform 0.7s ease; 
+  margin-right: 5rem;
+  transition: transform 0.7s ease;
+  font-size: 0.8rem;
 }
 
 .header-menu li a {
   color: var(--cor-texto-escuro);
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
 }
 
 .header-menu li:hover {
   transform: scale(1.1);
+  color: #F15A24;
 }
-
-.header-contato {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.header-contato img {
-  width: 20px;
-}
-
-.header-contato a {
-  display: flex;
-  align-items: center;
-  padding: 0.8rem;
-  border: 1px solid var(--cor-background-escuro);
-  border-radius: 12px;
-  background: none;
-  position: relative;
-  font-size: 1rem;
-  color: var(--cor-texto-escuro);
-}
-
-
-
-
-
 
 @media (max-width: 768px) {
   .header-menu {
-    display: none; 
+    position: static; 
+    flex-direction: column;
+    align-items: flex-end;
+   
+  }
+
+  .header-menu ul {
+    flex-direction: column;
+    margin: 0;
+    text-align: center;
+  }
+
+  .header-menu li {
+    font-size: 1.2rem;
+    margin: 0;
+    font-size: 0.8rem;
+  }
+
+  .header-menu li a {
+    font-size: 1.2rem;
+  }
+
+  .central-container {
+    flex-direction: column; 
+    gap: 1rem; 
+  }
+
+  .central-item img {
+    width: 50%; /* Ajusta o tamanho das imagens para caber na tela */
+  }
+}
+
+@media (min-width: 769px) {
+
+
+  .central-container {
+    flex-direction: row; /* Mantém os elementos lado a lado */
+  }
+
+  .central-item img {
+    width: auto; /* Mantém o tamanho original */
+  }
+}
+
+/* @media (max-width: 768px) {
+  .header-menu {
+    display: none;
     position: absolute;
     top: 100%;
     right: 0;
@@ -110,11 +114,6 @@
     z-index: 999;
   }
 
-  .header-nome h1 {
-    font-size: 1.2rem;
-    margin: 0;
-  }
-
   .header-menu ul {
     flex-direction: column;
     text-align: center;
@@ -122,10 +121,9 @@
     padding: 1rem;
     color: white;
   }
- 
 
   .header-hamburguer {
-    display: flex; /* Aparece o hamburguer */
+    display: flex; 
   }
   .header-hamburguer span {
     width: 15px;
@@ -135,16 +133,9 @@
   .header-imagem-circulo {
     width: 10px;
   }
-
-  .header-contato a {
-    padding: 0.3rem;
-  }
-  .header-contato img {
-    width: 15px;
-  }
 }
 
-/* Telas maiores (769px ou mais) - Remove menu hamburguer */
+
 @media (min-width: 769px) {
   .header-hamburguer {
     display: none;
@@ -153,4 +144,4 @@
   .header-menu {
     display: flex;
   }
-}
+} */
