--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
   --cor-borda-imagem-habilidade: #b0b0b02d;
   --cor-borda-retangulo-habilidae: rgba(0, 0, 0, 0.7);
 
-  --font-family: "winco", sans-serif;
+  --font-family: "Encode Sans SC";
 }
 
 /* [data-tema="escuro"]{
@@ -32,6 +32,9 @@
 html {
   user-select: none;
   scroll-behavior: smooth;
+  width: 100%;
+  height: 100vh;
+
 }
 
 body {
@@ -42,100 +45,36 @@ body {
   overflow-x: hidden;
   font-family: var(--font-family);
   font-size: 1rem;
+  line-height: 1.5;
   font-style: normal;
   position: relative;
+  display: flex; 
+  flex-direction: column; 
 
 }
 main {
-  flex: 1; 
+  flex: 1;
+  min-height: 100vh;
 }
 
-.linha {
-  position: absolute;
-  left: 60%;
-  top: 40%;
-  transform: translateX(-50%);
-  z-index: -3;
-  opacity: 0.2;
- 
+/* section{
+opacity: 0; 
+transform: translateY(50px);
+transition: opacity 1s ease, transform 30s ease;
 }
-
-.skills-linha{
-  display: none;
-}
-
-.sobre-mim-background {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.sobre-mim-2-background {
-  width: 30%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  position: relative;
-  margin-top: 10rem;
-}
-
-.background-preto {
-  width: 20%;
-  position: absolute;
-  top: -50%;
-  right: -65%;
-}
-
-.background-cinza {
-  width: 30%;
-  position: absolute;
-  top: 50%;
-  right: 80%;
-}
+section.active {
+  opacity: 1;
+  transform: translateY(0); 
+} */
 
 @media (max-width: 768px) {
   body {
     overflow-x: hidden;
   }
 
-  .linha {
-    display: none !important;
-  }
-
-  .skills-linha{
-    display: block;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    opacity: 0.5;
-    height: 1050px;
-    width: 7px;
-    z-index: -5;
-  }
-
-  .sobre-mim-2-background {
-    width: 100%; 
-    margin-top: 5rem;
-  }
-
-  .background-preto,
-  .background-cinza {
-    display: none;
-  }
-
 }
 @media (max-width: 480px) {
 
-  .linha {
-    display: none !important;
-  }
 
-  .skills-linha{
-    display: block;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    opacity: 0.5;
-
-  }
 }
 
