--- a/css/header.css
+++ b/css/header.css
@@ -16,7 +16,10 @@
 .header-menu {
   display: flex;
   position: fixed;
-  width: 100%;
+  /* width: 100%; */
+  top: 8%; 
+  left: 70%; 
+  transform: translateX(-70%);
   background: transparent;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -30,7 +33,7 @@
   padding: 0;
   gap: 1rem;
   width: 70%;
-  margin-top: 20rem;
+
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
