--- a/css/lbcConsultoria.css
+++ b/css/lbcConsultoria.css
@@ -1,7 +1,6 @@
 @import url("/css/main.css");
 
 body {
-  background: #333333;
   color: white;
   width: 100%;
   height: 100vh;
@@ -12,17 +11,51 @@ body {
   position: relative;
   line-height: 1.7;
 }
+/* ================HEADER================= */
 
-header {
-  color: var(--cor-texto-escuro);
-  padding: 20px;
-  text-align: center;
-  margin-bottom: 5rem;
+.header-menu {
+  display: flex;
+  position: fixed;
+  top: 10%; 
+  left: 90%; 
+  transform: translateX(-70%);
+  background: transparent;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+.header-menu ul {
+  list-style: none;
+  padding: 0;
+  gap: 1rem;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+}
+
+.header-menu li {
+  text-align: center;
+  margin-right: 5rem;
+  transition: transform 0.7s ease;
+  font-size: 0.8rem;
+}
+
+.link-lbc {
+  color: white;
+  text-decoration: none;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+}
+
+.header-menu li:hover {
+  transform: scale(1.1);
+  color:aquamarine;
+}
+
+/* ==============BANNER PROJETO COM O LOGO==================== */
 
 .logo img {
   width: 150px;
-  padding: 5rem 0 0 3rem;
+  padding: 2rem 0 0 3rem;
 }
 
 .container h1 {
@@ -32,62 +65,171 @@ header {
   align-items: center;
   padding: 2rem;
   width: 100%;
-  font-weight: 600;
+  font-weight: 300;
+  font-size: 1.3rem;
 }
 
-.container {
-  max-width: 1200px;
+/* ===============UX-UI================= */
+
+.container-ux-ui {
+  max-width: 100%;
+  min-height: 95vh;
   margin: 0 auto;
   padding: 20px;
+  background: #3f74a9;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
-.ux-ui{
-padding-bottom: 10rem;
+.layout-container {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
 
+.container-section {
+  width: 50%;
+  margin-left: 10rem;
 }
 
 h2 {
-  color: #ED5E5E;
-  font-size: 1.8rem;
-  margin-bottom: 20px;
-}
-
-p {
-  font-size: 1rem;
+  color: white;
+  font-size: 1.2rem;
   margin-bottom: 10px;
 }
 
-.site-antigo {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin: 1rem;
-  color: inherit;
-  text-underline-offset: 3px;
+p {
+  font-size: 0.8rem;
+  margin-bottom: 10px;
 }
 
-.cta-button {
-  display: inline-block;
-  background-color: transparent;
-  color: black;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
+.grupos-container {
+  width: 50%;
+}
+
+.grupos {
+  margin-left: 12rem;
+  width: 50%;
+  text-align: left;
+  position: relative;
+  padding-top: 1rem;
+}
+
+.imagem-linha-grupos {
+  position: absolute;
+  left: 11%;
+  padding-top: 1rem;
+  height: 520px;
+}
+
+.documentacao-completa {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 310px;
+  flex: 1;
+  margin-left: 5rem;
+  text-align: center;
+}
+
+.documentacao-completa-links {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 0.8rem;
+  width: fit-content;
+  max-height: fit-content;
+  padding-bottom: 1rem;
+  margin: 0;
+}
+
+.links {
+  color: white;
+  cursor: pointer;
+  font-size: 0.8rem;
+  padding: 0;
+  white-space: nowrap;
   font-weight: bold;
-  margin-top: 20px;
-  width: 100%;
-  max-width: 200px;
-  display: flex;
-  text-align: center;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 1.5px;
   align-items: center;
-  justify-content: row;
-  transform: background-color 0.2s ease, transform 0.5s ease;
 }
 
-.cta-button:hover {
-  background-color: var(--cor-texto-escuro);
-  color: var(--cor-texto-claro);
-  transform: scale(1.1);
+
+
+.ellipse-lbc {
+  position: absolute;
+  left: 90%;
+  top: 90%;
+}
+
+/* ===============FRONT-BACK================= */
+
+.container-front-back {
+  max-width: 100%;
+  max-height: 100vh;
+  margin: 0 auto;
+  padding: 20px;
+  background: white;
+  color: black;
+  display: flex;
+  flex-direction: column;
+}
+
+.grupos-container {
+  width: 50%;
+  padding-top: 3rem;
+}
+.imagem-linha-grupos-front-back {
+  position: absolute;
+  left: 11%;
+  top: 98%;
+  height: 620px;
+}
+
+.container-section-front-back {
+  width: 100%;
+  margin-bottom: 20px;
+  margin-left: 13rem;
+}
+
+.container-section-front-back h2 {
+  color: black; /* Cor do título */
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.container-section-front-back p,
+.container-section-front-back ul {
+  font-size: 0.8rem;
+  margin-bottom: 10px;
+}
+
+.imagem-linha-grupos {
+  position: absolute;
+  left: 11%;
+  padding-top: 1rem;
+  height: 520px;
+}
+
+.resultados {
+  padding-left: 20rem;
+  width: 60%;
+}
+
+.resultados-site{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-top: 3rem;
+}
+.resultados-site p{
+  padding-right: 3rem;
+}
+
+.site {
+  text-align: right;
+  color: black;
 }
 
 @media (max-width: 1200px) {
