--- a/css/trabalhosRealizados.css
+++ b/css/trabalhosRealizados.css
@@ -24,7 +24,7 @@
   position: relative;
 }
 
-.trabalhos-strong{
+.trabalhos-strong {
   font-size: 5rem;
   font-weight: bold;
 }
@@ -40,7 +40,7 @@
   text-decoration: none;
   color: inherit;
   padding: 2rem;
-  cursor: pointer;;
+  cursor: pointer;
 }
 
 .trabalhos-link-seta {
@@ -55,12 +55,12 @@
   color: inherit;
   padding: 1rem;
   text-decoration: line-through;
-  cursor: pointer;;
-  
+  cursor: pointer;
 }
+
 /* ======= ESTILIZAÇAO DO "EM ANDAMENTO" ================*/
 
-.trabalhos-andamento{
+.trabalhos-andamento {
   position: absolute;
   left: 22%;
   top: 75%;
@@ -69,27 +69,44 @@
 }
 
 .tag {
-  color: #61DDB0; 
+  color: #61ddb0;
 }
 
 .texto {
-  color: #ED5E5E;
+  color: #ed5e5e;
 }
 
-/* ==========DESCRICAO=============== */
-.trabalhos-descricao{
+/* =============DESCRICAO=============== */
+
+.trabalhos-descricao {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   width: 100%;
 }
-.trabalhos-descricao p{
+.trabalhos-descricao p {
   display: flex;
   justify-content: flex-end;
-padding-top: 5rem;
+  padding-top: 5rem;
   width: 8%;
   font-size: 0.8rem;
   margin: 2rem;
 }
 
+/* ==============SKILLS=============== */
 
+.trabalhos-skills{
+  color: white;
+  display: flex;
+  padding-left: 40rem;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #61ddb0;
+  transition: all 0.6s ease;
+}
+
+.trabalhos-skills:hover{
+  color: #FFA500;
+  text-decoration-color:white ;
+  transform: scale(1.02);
+}
