--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@
   --font-family: "Encode Sans SC";
 }
 
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
 html {
   user-select: none;
   scroll-behavior: smooth;
