--- a/css/sobremim.css
+++ b/css/sobremim.css
@@ -14,6 +14,7 @@
   width: 40%;
   height: auto;
   margin: 5rem 0;
+  padding-top: 5rem;
   text-align: center;
   overflow-x: hidden;
   position: relative;
