--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -1,7 +1,6 @@
 #experiencia {
   max-width: 100%;
   min-height: 100vh;
-  /* padding: 3rem 0; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -93,6 +92,117 @@
 }
 /* ============ RESPONSIViDADE PARA TELAS PEQUENAS (768px) ============ */
 
+@media (max-width: 780px) {
+  #experiencia {
+    min-height: 80vh;
+    padding: 2rem 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
 
+  .experiencia-titulo p {
+    justify-content: center;
+    padding: 1rem 0;
+    width: 100%;
+    text-align: center;
+    order: 1;
+  }
 
+  .imagem-circulo {
+    padding-left: 0;
+    width: 60%;
+    max-width: 500px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    order: 3;
+  }
 
+  .imagem-linha-horinzontal-vermelha {
+    top: 10%;
+    width: 90%;
+    margin: 0 auto;
+    order: 2;
+  }
+  .imagem-linha-central-preta {
+    left: 35%;
+  }
+
+  .experiencia-descricao {
+    position: static;
+    top: auto;
+    right: auto;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .experiencia-descricao p {
+    font-size: 0.7rem;
+  }
+
+  .experiencia-empresas {
+    font-size: 0.6rem;
+  }
+
+  .experiencia-download {
+    position: static;
+    top: auto;
+    left: auto;
+    margin: 1rem auto;
+    text-align: center;
+  }
+
+  .experiencia-download a {
+    font-size: 0.6rem;
+  }
+
+  .experiencia-cidade {
+    position: static;
+    top: auto;
+    left: auto;
+    margin: 1rem auto;
+    text-align: center;
+    font-size: 0.6em;
+  }
+}
+
+@media (max-width: 480px) {
+  .imagem-linha-central-preta {
+    left: 30%;
+  }
+
+  .experiencia-titulo p {
+    font-size: 0.6rem;
+  }
+
+  .experiencia-cidade {
+    position: static;
+    top: auto;
+    left: auto;
+    margin: 1rem auto;
+    text-align: center;
+    font-size: 0.6rem;
+  }
+  .imagem-circulo {
+    width: 80%;
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 380px) {
+  #experiencia {
+    min-height: 60vh;
+  }
+
+  .experiencia-titulo p {
+    font-size: 0.5rem;
+    padding: 0.3rem 0;
+  }
+
+  .imagem-circulo {
+    width: 60%;
+    max-width: 200px;
+  }
+}
