--- a/css/trabalhosRealizados.css
+++ b/css/trabalhosRealizados.css
@@ -95,7 +95,7 @@
 
 /* ==============SKILLS=============== */
 
-.trabalhos-skills{
+.trabalhos-skills {
   color: white;
   display: flex;
   padding-left: 40rem;
@@ -105,8 +105,197 @@
   transition: all 0.6s ease;
 }
 
-.trabalhos-skills:hover{
-  color: #FFA500;
-  text-decoration-color:white ;
+.trabalhos-skills:hover {
+  color: #ffa500;
+  text-decoration-color: white;
   transform: scale(1.02);
+}
+
+@media (max-width: 780px) {
+  #trabalhos {
+    min-height: 80vh;
+  }
+
+  .trabalhos-titulo {
+    font-size: 0.7rem;
+    margin: 1rem 2rem 0 0;
+    justify-content: center;
+  }
+
+  .trabalhos-container {
+    margin: 5rem 1rem 1rem 1rem;
+    align-items: center;
+  }
+
+  .trabalhos-strong {
+    font-size: 3rem;
+  }
+
+  .trabalhos-lbc-consultoria {
+    width: 80%;
+    font-size: 2.5rem;
+    padding: 1rem;
+  }
+
+  .trabalhos-link-seta {
+    margin-top: 1rem;
+    padding: 0.5rem;
+  }
+
+  .trabalhos-door-digital {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    margin-top: 2rem;
+  }
+
+  .trabalhos-andamento {
+    left: 75%;
+    top: 61%;
+    font-size: 0.6rem;
+    width: auto;
+  }
+
+  .trabalhos-descricao {
+    justify-content: center;
+  }
+
+  .trabalhos-descricao p {
+    width: 30%;
+    font-size: 0.7rem;
+    margin: 1rem;
+    padding-top: 5rem;
+    text-align: center;
+  }
+
+  .trabalhos-skills {
+    padding-left: 0;
+    margin-top: 4rem;
+    justify-content: center;
+  }
+
+  .trabalhos-skills:hover {
+    color: inherit; 
+    text-decoration-color: inherit; 
+    transform: none; 
+  }
+}
+
+@media (max-width: 480px) {
+  #trabalhos {
+    min-height: 70vh;
+  }
+
+  .trabalhos-titulo {
+    font-size: 0.6rem;
+    margin: 0.5rem 1rem 0 0;
+  }
+
+  .trabalhos-container {
+    margin: 3rem 0.5rem 0.5rem 0.5rem;
+  }
+
+  .trabalhos-strong {
+    font-size: 2rem;
+  }
+
+  .trabalhos-lbc-consultoria {
+    font-size: 2rem;
+    padding: 0.5rem;
+  }
+
+  .trabalhos-link-seta {
+    margin-top: 0.5rem;
+    padding: 0.3rem;
+  }
+
+  .trabalhos-door-digital {
+    font-size: 1rem;
+    padding: 0.3rem;
+  }
+
+  .trabalhos-andamento {
+    font-size: 0.5rem;
+  }
+
+  .trabalhos-linhas1 {
+    width: 400px;
+  }
+  .trabalhos-linhas2 {
+    width: 300px;
+  }
+
+  .trabalhos-descricao p {
+    font-size: 0.6rem;
+    padding-top: 7rem;
+  }
+
+  .trabalhos-skills {
+    font-size: 0.7rem;
+  }
+
+   .trabalhos-skills:hover {
+    color: inherit;
+    text-decoration-color: inherit;
+    transform: none;
+  }
+}
+
+@media (max-width: 380px) {
+  #trabalhos {
+    min-height: 50vh;
+  }
+
+  .trabalhos-titulo {
+    font-size: 0.5rem;
+    margin: 0.3rem 0.5rem 0 0;
+  }
+
+  .trabalhos-container {
+    margin: 2rem 0.3rem 0.3rem 0.3rem;
+  }
+
+  .trabalhos-strong {
+    font-size: 1.5rem;
+  }
+
+  .trabalhos-lbc-consultoria {
+    font-size: 1.5rem;
+    padding: 0.3rem;
+  }
+
+  .trabalhos-link-seta {
+    margin-top: 0.3rem;
+    padding: 0.2rem;
+  }
+
+  .trabalhos-door-digital {
+    font-size: 0.8rem;
+    padding: 0.2rem;
+  }
+
+  .trabalhos-andamento {
+    font-size: 0.4rem;
+  }
+
+  .trabalhos-linhas1 {
+    width: 300px;
+  }
+  .trabalhos-linhas2 {
+    width: 200px;
+  }
+
+  .trabalhos-descricao p {
+    font-size: 0.5rem;
+    padding-top: 0.5rem;
+  }
+
+  .trabalhos-skills {
+    font-size: 0.6rem;
+  }
+  
+  .trabalhos-skills:hover {
+    color: inherit;
+    text-decoration-color: inherit;
+    transform: none;
+  }
 }
