--- a/css/lbcConsultoria.css
+++ b/css/lbcConsultoria.css
@@ -2,22 +2,20 @@
 
 body {
   color: white;
-  width: 100%;
+  max-width: 100%;
   height: 100vh;
   overflow-x: hidden;
   font-family: var(--font-family);
-  font-size: 1rem;
   font-style: normal;
   position: relative;
-  line-height: 1.7;
 }
 /* ================HEADER================= */
 
 .header-menu {
   display: flex;
   position: fixed;
-  top: 10%; 
-  left: 90%; 
+  top: 10%;
+  left: 90%;
   transform: translateX(-70%);
   background: transparent;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -48,55 +46,55 @@ body {
 
 .header-menu li:hover {
   transform: scale(1.1);
-  color:aquamarine;
+  color: aquamarine;
 }
 
 /* ==============BANNER PROJETO COM O LOGO==================== */
-
-.logo img {
-  width: 150px;
-  padding: 2rem 0 0 3rem;
+.container-titulo-projeto {
+  display: flex;
+  width: 100%;
+  margin-left: 16rem;
 }
 
-.container h1 {
+.logo {
+  width: 150px;
+}
+
+.titulo-projeto h1 {
   color: white;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  width: 100%;
   font-weight: 300;
-  font-size: 1.3rem;
 }
 
 /* ===============UX-UI================= */
 
 .container-ux-ui {
-  max-width: 100%;
-  min-height: auto;
-  margin: 0 auto;
-  padding: 20px;
-  background: #3f74a9;
-  flex: 1;
+  width: 100%;
+  min-height: 100vh;
+  background: #2e2e2e;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding-top: 5rem;
 }
 
 .layout-container {
+  width: 100%;
+  max-width: 100%;
+  padding-left: 2rem;
   display: flex;
-  align-items: center;
-  gap: 2rem;
-
+  flex-direction: column;
+  /* align-items: center; */
 }
 
 .container-section {
-  width: 50%;
-  margin-left: 10rem;
+  width: 30%;
+  line-height: 1.7;
 }
 
 h2 {
   color: white;
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-bottom: 10px;
 }
 
@@ -105,55 +103,12 @@ p {
   margin-bottom: 10px;
 }
 
-.grupos-container {
-  width: 50%;
-}
-
-.grupos {
-  margin-left: 12rem;
-  width: 50%;
-  text-align: left;
-  position: relative;
-  padding-top: 1rem;
-}
-
-.imagem-linha-grupos {
-  position: absolute;
-  left: 11%;
-  padding-top: 1rem;
-  height: 520px;
-}
-
-.documentacao-completa {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 310px;
-  flex: 1;
-  margin-left: 5rem;
-  text-align: center;
-}
-
-.documentacao-completa-links {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 0.8rem;
-  width: fit-content;
-  max-height: fit-content;
-  padding-bottom: 1rem;
-  margin: 0;
-}
-
-.links {
-  color: white;
-  cursor: pointer;
+a {
   font-size: 0.8rem;
-  padding: 0;
-  white-space: nowrap;
-  font-weight: bold;
-  text-underline-offset: 3px;
-  text-decoration-thickness: 1.5px;
-  align-items: center;
+  padding: 1rem;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 .ellipse-lbc {
@@ -162,105 +117,240 @@ p {
   top: 90%;
 }
 
-/* ===============FRONT-BACK================= */
+/* =====================MODAL===================== */
 
-.container-front-back {
-  max-width: 100%;
-  max-height: 100vh;
-  margin: 0 auto;
-  padding: 20px;
-  background: white;
-  color: black;
-  display: flex;
-  flex-direction: column;
-}
-
-.grupos-container {
-  width: 50%;
-  padding-top: 3rem;
-}
-.imagem-linha-grupos-front-back {
-  position: absolute;
-  left: 11%;
-  top: 98%;
-  height: 620px;
-}
-
-.container-section-front-back {
-  width: 100%;
-  margin-bottom: 20px;
-  margin-left: 13rem;
-}
-
-.container-section-front-back h2 {
-  color: black; 
-  font-size: 1.3rem;
-  margin-bottom: 10px;
-}
-
-.container-section-front-back p,
-.container-section-front-back ul {
-  font-size: 0.8rem;
-  margin-bottom: 10px;
-}
-
-.imagem-linha-grupos {
-  position: absolute;
-  left: 11%;
-  padding-top: 1rem;
-  height: 520px;
-}
-
-.resultados {
-  padding-left: 20rem;
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  right: 0; 
+  top: 0;
   width: 60%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  overflow: auto;
+  backdrop-filter: blur(5px);
 }
 
-.resultados-site{
+.modal-conteudo {
+  color: white;
+  margin: auto;
+  padding: 4rem 2rem;
+  max-width: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  transform: translateY(150%);
+  transition: transform 0.5s ease-in-out;
+  text-align: center;
+}
+
+.modal.active .modal-conteudo {
+  transform: translateY(0);
+}
+
+.fechar-modal {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.fechar-modal:hover,
+.fechar-modal:focus {
+  color: white;
+  text-decoration: none;
+}
+
+.modal-conteudo h2 {
+  margin-bottom: 10px;
+  color: white;
+  text-align: left;
+}
+
+.modal-conteudo h3,
+.modal-conteudo h4 {
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: white;
+  text-align: left;
+  font-size: 1rem;
+}
+
+.modal-conteudo p,
+.modal-conteudo ul {
+  line-height: 1.6;
+  color: white;
+  margin-bottom: 15px;
+  text-align: left;
+  font-size: 0.8rem;
+}
+
+.cabecalho-modal {
+  border-bottom: 1px solid #e0e0e0;
+  margin-bottom: 5rem;
+  width: 30%;
+}
+
+.cabecalho-titulo {
+  display: flex;
+  margin-left: 4rem;
+}
+
+.separador {
+  font-size: 2rem;
+  margin: 0 2rem;
+}
+
+.botao-prototipo {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  font-size: 0.8rem;
+}
+
+.botao-prototipo:hover {
+  background-color: #0052a3;
+  color: white;
+}
+
+.modal-section {
+  width: 100%;
+  margin-bottom: 2rem;
+  padding: 0 2rem;
+}
+
+.modal-item {
+  display: flex;
+  align-items: center; 
+  justify-content: space-between; 
+  width: 100%;
+  gap: 20px; 
+  padding: 1rem 0;
+}
+
+.numero {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: aquamarine;
+  min-width: 50px; 
+  text-align: right; 
+}
+
+.conteudo {
+  flex: 1; 
+}
+
+.conteudo h2 {
+  margin-top: 0;
+  font-size: 1.2rem;
+}
+
+.conteudo p {
+  margin: 0.5rem 0 0; 
+  line-height: 1.6;
+  width: 100%;
+  text-align:left;
+}
+
+.modal-desafio-solucoes,
+.modal-personas,
+.modal-style-guide{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 2rem;
+}
+
+.modal-coluna {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  padding-top: 3rem;
-}
-.resultados-site p{
-  padding-right: 3rem;
+  gap: 10px;
 }
 
-.site {
-  text-align: right;
-  color: black;
+.modal-personas .modal-coluna .modal-style-guide {
+  align-items: center;
+}
+
+.modal-personas img,
+.modal-style-guide img{
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+
+/* =========== Imagem expandida=================== */
+.overlay {
+  display: none;
+  position: fixed;
+  z-index: 1001;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: auto;
+}
+
+#imagem-expandida {
+  max-width: 90%;
+  max-height: 80vh;
+  margin: auto;
+  display: block;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 8px;
+}
+
+.fechar-imagem {
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  cursor: pointer;
+}
+
+.fechar-imagem:hover,
+.fechar-imagem:focus {
+  color: #ccc;
 }
 
 @media (max-width: 1200px) {
   .header-menu {
-    top: 5%; 
-    left: 95%; 
-    transform: translateX(-50%); 
+    top: 5%;
+    left: 95%;
+    transform: translateX(-50%);
   }
 
   .header-menu li {
-    margin-right: 0; 
-    font-size: 0.7rem; 
+    margin-right: 0;
+    font-size: 0.7rem;
   }
 
   .container-section {
-    width: 60%; 
-    margin-left: 2rem; 
+    width: 60%;
+    margin-left: 2rem;
   }
 
   .grupos {
-    margin-left: 0; 
-    width: 80%; 
+    margin-left: 0;
+    width: 80%;
   }
 
   .imagem-linha-grupos {
-    left: 3%; 
-    height: 800px; 
+    left: 3%;
+    height: 800px;
   }
 
-
   .container-section-front-back {
-    margin-left: 2rem; 
+    margin-left: 2rem;
   }
 
   .imagem-linha-grupos-front-back {
@@ -272,65 +362,62 @@ p {
   }
 
   .resultados {
-    padding-left: 0; 
-    width: 90%; 
+    padding-left: 0;
+    width: 90%;
   }
 }
 
-
 @media (max-width: 768px) {
   .header-menu {
-    top: 3%; 
-    left: 90%; 
-    transform: translateX(-50%); 
+    top: 3%;
+    left: 90%;
+    transform: translateX(-50%);
   }
 
   .header-menu li {
-    font-size: 0.6rem; /
+    font-size: 0.6rem;
   }
 
   .grupos-container {
     padding: 0;
   }
   .layout-container {
-    flex-direction: column; 
-    align-items: center; 
+    flex-direction: column;
+    align-items: center;
     gap: 1rem;
   }
   .imagem-linha-grupos-front-back {
     left: 24%;
     top: 88%;
-
   }
 
   .container-section {
     width: 90%;
-    margin-left: 0; 
+    margin-left: 0;
   }
 
   .grupos {
-    width: 90%; 
-    margin-left: 0; 
+    width: 90%;
+    margin-left: 0;
   }
 
   .imagem-linha-grupos {
     left: 27%;
     top: 19%;
- 
   }
- 
+
   .container-front-back {
-    padding: 10px; 
+    padding: 10px;
   }
 
   .container-section-front-back {
-    width: 90%; 
-    margin-left: 0; 
+    width: 90%;
+    margin-left: 0;
   }
 
   .resultados {
-    padding-left: 0; 
-    width: 90%; 
+    padding-left: 0;
+    width: 90%;
   }
 
   h2 {
@@ -338,25 +425,41 @@ p {
   }
 
   p {
-    font-size: 0.7rem; 
+    font-size: 0.7rem;
+  }
+
+  .modal-conteudo {
+    width: 95%;
+    padding: 15px;
+  }
+
+  .modal-conteudo h2 {
+    font-size: 22px;
+  }
+
+  .modal-conteudo h3 {
+    font-size: 18px;
+  }
+
+  .modal-conteudo p,
+  .modal-conteudo li {
+    font-size: 15px;
   }
 }
 
-
 @media (max-width: 600px) {
   .header-menu {
-    top: 2%; 
-    left: 85%; 
-    transform: translateX(-50%); 
+    top: 2%;
+    left: 85%;
+    transform: translateX(-50%);
   }
 
   .header-menu li {
-    font-size: 0.5rem; 
+    font-size: 0.5rem;
   }
 
-
   .container-section {
-    width: 100%; 
+    width: 100%;
   }
 
   .grupos {
@@ -366,42 +469,39 @@ p {
   .imagem-linha-grupos {
     left: 27%;
     top: 29%;
-
   }
   .container-section-front-back p,
-  .container-section-front-back ul{
+  .container-section-front-back ul {
     font-size: 0.8rem;
   }
 
-  .container-section-front-back h2{
+  .container-section-front-back h2 {
     font-size: 1rem;
   }
 
   .resultados p {
-    width: 100%; 
-}
+    width: 100%;
+  }
 }
 
 @media (max-width: 468px) {
   .header-menu {
     top: 1%;
-    left: 80%; 
-    transform: translateX(-50%); 
+    left: 80%;
+    transform: translateX(-50%);
   }
 
   .header-menu li {
-    font-size: 0.5rem; 
+    font-size: 0.5rem;
   }
 
-
   .imagem-linha-grupos {
-    height: 500px; 
+    height: 500px;
   }
 
   .imagem-linha-grupos {
     left: 28%;
     top: 29%;
-
   }
   .imagem-linha-grupos-front-back {
     position: absolute;
@@ -412,16 +512,16 @@ p {
   }
 
   .container-section-front-back p,
-  .container-section-front-back ul{
+  .container-section-front-back ul {
     font-size: 0.5rem;
   }
 
   h2 {
-    font-size: 0.8rem; 
+    font-size: 0.8rem;
   }
 
   p {
-    font-size: 0.5rem; 
+    font-size: 0.5rem;
   }
 }
 
@@ -429,19 +529,19 @@ p {
   .grupos-container {
     padding: 0;
   }
-  
+
   .header-menu {
-    top: 0.5%; 
-    left: 75%; 
-    transform: translateX(-50%); 
+    top: 0.5%;
+    left: 75%;
+    transform: translateX(-50%);
   }
 
   .header-menu li {
-    font-size: 0.3rem; 
+    font-size: 0.3rem;
   }
 
   .imagem-linha-grupos {
-    height: 500px; 
+    height: 500px;
   }
   .imagem-linha-grupos {
     left: 28%;
@@ -449,10 +549,10 @@ p {
   }
 
   h2 {
-    font-size: 0.7rem; 
+    font-size: 0.7rem;
   }
 
   p {
-    font-size: 0.4rem; 
+    font-size: 0.4rem;
   }
 }
